--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 			Dkssud
 		</title>
 	</head>
-	<body bgcolor=green>
+	<body bgcolor=yellow>
 		<p>
-			Hello there
+			Hello there my friend
 		</p>
 	</body>
 </html>
